syntax = "proto3";
option go_package = "protobuf";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "yum-rest";
    version: "0.0.1";
  };
};

service RestService {

  rpc GetThing(GetThingReq) returns (GetThingRes) {
    option (google.api.http) = {
      get: "/v1/Thing/{thingID}"
    };
  }

  rpc CreateThing(CreateThingReq) returns (CreateThingRes) {
    option (google.api.http) = {
      post: "/v1/Thing"
      body: "*"
    };
  }

  rpc UpdateThing(UpdateThingReq) returns (UpdateThingRes) {
    option (google.api.http) = {
      put: "/v1/Thing/{thing.id}"
      body: "*"
    };
  }

  rpc DeleteThing(DeleteThingReq) returns (DeleteThingRes) {
    option (google.api.http) = {
      delete: "/v1/Thing/{thingID}"
      body: "*"
    };
  }
}

message Thing {
  string id = 1;
  string name = 2;
  Object object = 4;
}

message Object {
  string name = 1;
  int32 value = 2;
}

message GetThingReq {
  string thingID = 1;
}

message GetThingRes {
  int32 status = 1;
  string description = 2;
  Thing thing = 3;
}

message CreateThingReq {
  Thing thing = 1;
}

message CreateThingRes {
  int32 status = 1;
  string description = 2;
  string thingID = 3;
}

message UpdateThingReq {
  Thing thing = 1;
}

message UpdateThingRes {
  int32 status = 1;
  string description = 2;
}

message DeleteThingReq {
  string thingID = 1;
}

message DeleteThingRes {
  int32 status = 1;
  string description = 2;
}